# LittleInterpreter

./: CMakeLists.txt  README.md  head1.h  head2.h  test  test.h  test1.cc  test2.cc
src/: Ast.cc  Ast.h  CMakeLists.txt  Environment.cc  Environment.h  Error.cc  Error.h  Helper.h  Lexer.cc  Lexer.h  Main.cc  Parser.cc  Parser.h  Token.h
src/Ast/: Ast.cc  Ast.h  AstFunc.cc
src/Parser/: Parser.cc  Parser.h  ParserFunc.cc
src/tools/: Cast.h  FloatCompare.h
tests/: AstFuncTest.cc  AstTest.cc  CMakeLists.txt  EnvironmentTest.cc  LexerTest.cc  ParserFuncTest.cc  ParserTest.cc
tests/data/: test.txt
tests/testcases/: LexerCase.txt  ParserCase.txt  ParserCase1.txt
